objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Actual_Product_Name__c</fullName>
        <description>to house the text product name for use in quotes</description>
        <label>Actual Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Measurements__c</fullName>
        <label>Additional Measurements</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Weighted_Cost__c</fullName>
        <description>ipim field map: Direct Average Weighted Cost</description>
        <inlineHelpText>ipim field map: Direct Average Weighted Cost</inlineHelpText>
        <label>Average Weighted Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOM_Component_Qty__c</fullName>
        <description>ipim field map: Component Qty, where indicating # of components skus associated with this header sku, not the # of total pieces. No systemic flag for skus that are components at this time.  032111LALO</description>
        <label>BOM Component Qty</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOM_Sku__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ipim field map: Kit Type S For header item, where S = BOM, checkbox is TRUE/checked. 032111LALO</description>
        <label>BOM Sku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_C_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B&amp;C Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CW_Color__c</fullName>
        <description>ipim field map: Color Code. 032111LALO</description>
        <label>CW Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_External_Id__c</fullName>
        <description>Commercial Ware External Id</description>
        <externalId>true</externalId>
        <label>CW External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Item_Description__c</fullName>
        <description>upload from ipim. field map: CW Item Description. 121311LALO</description>
        <label>CW Item Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Item_Num__c</fullName>
        <description>ipim field map: Item Number, where 8 digits, no punctuation. 032111LALO</description>
        <label>CW Item Num</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Size__c</fullName>
        <description>ipim field map: Size Code, where TR = Trade, for Trade Only Inventory (TOI). Note: Trade split w/ Contract in 2009.  032111LALO</description>
        <label>CW Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Number__c</fullName>
        <label>Category Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>weekly IPIM map to PIM Division (column B). 011612LALO</description>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <description>Code for Class Description</description>
        <label>Class Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Formula__c</fullName>
        <formula>Class_Code__c &amp; &quot; - &quot; &amp; Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <description>Weekly IPIM load, column BW. 011612LALO</description>
        <label>Collection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>If there is a color listed in Secondary Color, use that information, otherwise, use what is in the CW Color field.</description>
        <formula>CASE( CW_Color__c , &quot;NOT APPLICABLE&quot;,  Secondary_Color__c ,  CW_Color__c )</formula>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractOnlySKU__c</fullName>
        <description>Product SKU unique to Contract Department</description>
        <externalId>true</externalId>
        <inlineHelpText>Searchable Cross-reference field for corresponding retail product.</inlineHelpText>
        <label>ContractOnlySKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Cross_Reference_SKU__c</fullName>
        <description>Retail SKU related to a Contract-only product.</description>
        <externalId>true</externalId>
        <inlineHelpText>Searchable Cross-reference field for corresponding Contract-only product.</inlineHelpText>
        <label>Core Cross-Reference SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <description>ipim field map: Country of Origin.  032111LALO</description>
        <label>Country of Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cubic_Meters_CBM__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>( ( Metric_Package_Length_cm__c  *  Metric_Package_Width_cm__c  *  Metric_Package_Height_cm__c )* 1) / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cubic Meters (CBM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMSSku__c</fullName>
        <description>ipim field map: CWLINK, where field is concatenation of fields Item#,  Color Code, Size Code.  032111LALO</description>
        <externalId>true</externalId>
        <label>DMMSSku</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_formula__c</fullName>
        <formula>Dept_Code__c &amp; &quot; - &quot; &amp; Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Code__c</fullName>
        <description>Code for Department Description</description>
        <label>Dept Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diff_between_Original_Current_Price__c</fullName>
        <formula>Direct_Original_Price__c - Direct_Current_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diff between Original &amp; Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Current_Price__c</fullName>
        <description>ipim field map: Direct Current Price 032110LALO</description>
        <label>Direct Current Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_First_Cost__c</fullName>
        <label>Direct First Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Landing_Factor__c</fullName>
        <label>Direct Landing Factor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Original_Price__c</fullName>
        <description>ipim field map: Direct Original Price. 032111LALO</description>
        <label>Direct Original Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Pricing_Status__c</fullName>
        <description>ipim field map: Direct Pricing Status, where R=regular; M=permanent Markdown; T=Temporary Markdown.  032111LALO</description>
        <inlineHelpText>R=regular; 
M=permanent Markdown; 
T=Temporary Markdown</inlineHelpText>
        <label>Direct Pricing Status</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dropship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added per Trade Planning Manager to identify items set up to be dropshipped from vendor. 051809LALO.  ipim field map: SKU Drop Ship, where Y=True &amp; N=False. 032111LALO</description>
        <label>SPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECommerce_Display_Name__c</fullName>
        <label>ECommerce Display Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ELC__c</fullName>
        <description>Added per Trade Planning Manager to assist in calculating margin. 051809LALO.   ipim field map: Direct Landed Cost. 032111LALO</description>
        <inlineHelpText>Use Estimated Landed Cost (ELC)</inlineHelpText>
        <label>ELC</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecommerce_Description__c</fullName>
        <description>Description from Ecommerce site</description>
        <label>Ecommerce Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <description>ipim field map: Freight On Board. 032111LALO</description>
        <label>FOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilling_Warehouse__c</fullName>
        <description>ipim field map:  Fulfilling Warehouse, where F=Furniture &amp; S=Shelf Stock.  032111LALO,</description>
        <label>Fulfilling Warehouse</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harmonize_Code__c</fullName>
        <description>For the purpose of completing Commercial Invoices. Added to ipim mapping 082611 LALO</description>
        <label>Harmonize Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inner_Pack__c</fullName>
        <label>Inner Pack</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <description>Used to house JSON (denormalized) data from CW sent by Mule to break out into components displayed in a Visualforce Page section on the Product Layout. This field will be hidden except maybe for visibility for development puposes.</description>
        <label>Inventory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Class__c</fullName>
        <label>Item Class</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOQ__c</fullName>
        <description>ipim field map: Min Vendor Order Qty. 032111LALO</description>
        <label>MOQ</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Pack__c</fullName>
        <description>ipim field map: Direct Master Vendor Pack Qty.  032111LALO</description>
        <label>Master Pack</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Price__c</fullName>
        <formula>IF(OR(Direct_Pricing_Status__c = &apos;M&apos;,Direct_Pricing_Status__c =&apos;T&apos;) , FLOOR(Direct_Current_Price__c *(0.8)), FLOOR(Direct_Original_Price__c * (0.75)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Metric_Package_Height_cm__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Package_Height__c  * 2.54</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Package Height (cm)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Package_Length_cm__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Package_Length__c  * 2.54</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Package Length (cm)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Package_Weight_kg__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Package_Weight__c  * 0.453592</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Package Weight (kg)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Package_Width_cm__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Package_Width__c  * 2.54</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Package Width (cm)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Product_Height_cm__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Product_Height__c  * 2.54</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Product Height (cm)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Product_Length_cm__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Product_Length__c  * 2.54</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Product Length (cm)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Product_Weight_kg__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Product_Weight__c  * 0.453592</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Product Weight (kg)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Product_Width_cm__c</fullName>
        <description>Field to place under Sizing Information Section on Product Layout --&gt;Contract</description>
        <formula>Product_Width__c  * 2.54</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Product Width (cm)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monogram_able__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monogram-able</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi_Box_Formula__c</fullName>
        <formula>IF(OR(ISBLANK( Multi_Box__c ), Multi_Box__c = &quot;NA&quot;), Inner_Pack__c , Multi_Box__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi-Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Box__c</fullName>
        <label>Multi-Box</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Product_URL_Text__c</fullName>
        <formula>&quot;http://media.restorationhardware.com/is/image/rhis/&quot; &amp; ProductID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Product URL Text (DEP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Gallery_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, means this product will not be included on the Return Receipt generated by an In-Gallery Return.</inlineHelpText>
        <label>No Gallery Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIM_Division_Code__c</fullName>
        <label>PIMDivisionCode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIM_Division__c</fullName>
        <label>PIMDivisionName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Height__c</fullName>
        <description>Added to ipim mapping 082611 LALO</description>
        <label>Package Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Length__c</fullName>
        <description>Added to ipim mapping 082611 LALO</description>
        <inlineHelpText>(may be referred to as depth)</inlineHelpText>
        <label>Package Length</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Weight__c</fullName>
        <description>Added to ipim mapping 082611 LALO</description>
        <label>Package Weight</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Width__c</fullName>
        <description>Added to ipim mapping 082611 LALO</description>
        <label>Package Width</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <inlineHelpText>From RH Web Operations - this ID determines the Image URL for the Product on RH Web properties.  This field is maintained via periodic administrator upload.</inlineHelpText>
        <label>ProductID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Height__c</fullName>
        <label>Product Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Image_Thumbnail__c</fullName>
        <formula>IF(ISBLANK(Product_Image_URL__c), IMAGE(&quot;http://media.restorationhardware.com/is/image/rhis/noimage?wid=500&amp;hei=500&amp;fmt=gif&amp;qlt=85,1&amp;op_sharpen=0&amp;quantize=adaptive,diffuse,255,&amp;resMode=bilin&amp;op_usm=0,0,0,0&amp;iccEmbed=1&quot; 
,&quot;Product Image&quot;, 80, 80),IMAGE( Product_Image_URL__c ,&quot;Product Image&quot;, 80, 80))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_URL_New__c</fullName>
        <formula>/* Original Version of Formula*/ 
/* IF(ISBLANK(ProductID__c),&quot;No Image Available&quot;,HYPERLINK(&quot;http://media.restorationhardware.com/is/image/rhis/&quot; &amp; ProductID__c,&quot;Click to View Image&quot;)) */ 

/* DN 11DEC14 Updated version leverages updated ecommerce Web Service that returns image based on the SKU */ 
IF( Category__c = &quot;BABY &amp; CHILD&quot;, 
(IF(LEN(TRIM(Name)) &gt; 10, 
HYPERLINK(&quot;http://www.rhbabyandchild.com/resto/imageForSku?skuId=&quot; &amp; LEFT(TRIM(Name),6) &amp; &quot;%20&quot; &amp; 
MID(TRIM(Name), 7, 4) &amp; &quot;%20&quot; &amp; MID(TRIM(Name), 11, 4) ,&quot;Click to View Image&quot;), 
HYPERLINK(&quot;http://www.rhbabyandchild.com/resto/imageForSku?skuId=&quot; &amp; LEFT(TRIM(Name),6) &amp; &quot;%20&quot; &amp; 
MID(TRIM(Name), 7, 4) ,&quot;Click to View Image&quot;))), 

HYPERLINK(&quot;http://www.restorationhardware.com/resto/imageForSku?skuId=&quot; &amp; 
LEFT(TRIM(Name),8) &amp; &quot;%20&quot; &amp; MID(TRIM(Name), 9, 4) ,&quot;Click to View Image&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image URL (DEP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_URL__c</fullName>
        <description>the url where the image of the product resides</description>
        <label>Product Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IF(ISBLANK(Product_Image_URL__c), IMAGE(&quot;http://media.restorationhardware.com/is/image/rhis/noimage?wid=500&amp;hei=500&amp;fmt=gif&amp;qlt=85,1&amp;op_sharpen=0&amp;quantize=adaptive,diffuse,255,&amp;resMode=bilin&amp;op_usm=0,0,0,0&amp;iccEmbed=1&quot;
,&quot;Image Not Available&quot;, 461, 449),IMAGE( Product_Image_URL__c ,&quot;Image Not Available&quot;, 461, 449))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Length__c</fullName>
        <label>Product Length</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name_Plus_Number__c</fullName>
        <formula>Name &amp; &quot;&quot; &amp; Actual_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name/#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Weight__c</fullName>
        <label>Product Weight</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Width__c</fullName>
        <label>Product Width</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Lead_Time__c</fullName>
        <description>ipim field map: Production Lead Time</description>
        <label>Production Lead Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Search__c</fullName>
        <formula>Name &amp; ContractOnlySKU__c &amp; Core_Cross_Reference_SKU__c</formula>
        <label>SKU Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Ship_Via__c</fullName>
        <label>Product Ship Via</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Type__c</fullName>
        <label>SKU Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Accommodation Gift Card</fullName>
                </value>
                <value>
                    <fullName>Accommodation Gift Card Zero Dollar</fullName>
                </value>
                <value>
                    <fullName>Accommodation Zero Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is part of an integration, but should be deleted.</description>
        <label>itemdropship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STSSku__c</fullName>
        <description>ipim field map; RH Retail SKU. 032111LALO</description>
        <label>STSSku</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Color__c</fullName>
        <label>Secondary Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Lead_Time__c</fullName>
        <description>ipim field map: Shipping Lead Time. 032111LALO</description>
        <label>Shipping Lead Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sku_Status__c</fullName>
        <description>ipim field map: Sku Status, where A=Active, D=Discontinued, 
N - Non-selling; P – Part ; Q –  Quality Hold;  S – Swatch.  032111LALO</description>
        <label>Sku Status</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Out_Control__c</fullName>
        <description>ipim field map: Sold Out Control, where B= sell OH/OO; C=sell OH, don&apos;t sell what&apos;s on order.  032111LALO</description>
        <label>Sold Out Control</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Department_Formula__c</fullName>
        <formula>Sub_Dept_Code__c &amp; &quot; - &quot; &amp; Sub_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Dept_Code__c</fullName>
        <description>Code for Sub Department Description</description>
        <label>Sub Dept Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surcharge_Per_Item__c</fullName>
        <inlineHelpText>Includes add&apos;l calculated order fees such as for heavy/oversized items.  Typically this is $50-$100 per unit.</inlineHelpText>
        <label>Surcharge Per Item</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Attribute__c</fullName>
        <label>Tax Attribute</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Size__c</fullName>
        <formula>if( 
OR(Size__c = &quot;NA&quot;,Size__c=&quot;NOT APPLICABLE&quot;,Size__c=&quot;None&quot;), 
&quot;&quot;, 
Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Time__c</fullName>
        <formula>Production_Lead_Time__c +  Shipping_Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_On_Hand__c</fullName>
        <label>Total Quantity On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <description>ipim field map: Vendor Name, where PRIMARY ONLY. If more than one vendor per product, there is no systematic way to indicate this. 032111LALO</description>
        <label>Vendor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <description>ipim field map: Vendor Number (up to 9999), where PRIMARY ONLY. If more than one vendor per product, there is no systematic way to indicate this.. 032111LALO</description>
        <label>Vendor Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Style_Number__c</fullName>
        <label>Vendor Style Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Description__c</fullName>
        <description>ipim field map: Web Description</description>
        <label>Web Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Color_Not_Applicable</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Actual_Product_Name__c</columns>
        <columns>CW_Color__c</columns>
        <columns>Secondary_Color__c</columns>
        <columns>CW_Item_Description__c</columns>
        <columns>Direct_Current_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CW_Color__c</field>
            <operation>equals</operation>
            <value>NOT APPLICABLE</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Color Not Applicable</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Actual_Product_Name__c</columns>
        <columns>CW_Item_Description__c</columns>
        <columns>CW_Color__c</columns>
        <columns>Direct_Current_Price__c</columns>
        <columns>Direct_Original_Price__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Products</label>
    </listViews>
    <listViews>
        <fullName>No_Category</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Category__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Category</label>
    </listViews>
    <listViews>
        <fullName>With_Category</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Category__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>With Category</label>
    </listViews>
    <validationRules>
        <fullName>CSC_No_Change</fullName>
        <active>true</active>
        <description>In order to search for and view inactive Product records, profiles must have edit permission on the Product object.  This validation rule prevents Product record edit for certain profiles.</description>
        <errorConditionFormula>AND(
  NOT(ISNEW()),
  NOT($Profile.Name  = &quot;Business Administrator&quot;),
  NOT($Profile.Name  = &quot;System Administrator&quot;),
  NOT($Profile.Name = &quot;API Only&quot;)
)</errorConditionFormula>
        <errorMessage>Insufficient privileges.  You do not have the necessary privileges for the action you are attempting.  Please contact your system administrator if you need to perform this action.</errorMessage>
    </validationRules>
</CustomObject>